@@ -1,6 +1,7 @@
 <?php
 
-  global $date, $year, $month, $day, $thisyear, $thismonth, $thisday;
+  global $date, $year, $month, $day, $thisyear, $thismonth, $thisday, $filter, $keywords;
+//  global $filter_method;
   if(!isset($phpgw_info["user"]["preferences"]["calendar"]["weekdaystarts"]))
      $phpgw_info["user"]["preferences"]["calendar"]["weekdaystarts"] = "Sunday";
 
@@ -23,12 +24,20 @@
         $thisyear = $year;
   }
 
+//  if($filter=="all") $filter_method = "All";
+//  if($filter=="private") $filter_method = "Private Only";
+//  if($filter=="public") $filter_method = "Global Public Only";
+//  if($filter=="group") $filter_method = "Group Public Only";
+//  if($filter=="private+public") $filter_method = "Private and Global Public";
+//  if($filter=="private+group") $filter_method = "Private and Group Public";
+//  if($filter=="public+private") $filter_method = "Global Public and Group Public";
+
   if (!isset($phpgw_info["flags"]["nocalendarheader"]) ||
       !$phpgw_info["flags"]["nocalendarheader"]) {
 
 ?>
 
-<table border="0" width="100%" cellpadding="0" cellspacing="0">
+<table border="0" width="100%" cols="8" cellpadding="0" cellspacing="0">
  <tr>
   <td width="2%">
    &nbsp;
@@ -58,8 +67,9 @@
     <img src="<?php echo $phpgw_info["server"]["app_images"]; ?>/view.gif" alt="<?php echo lang("Daily Matrix View"); ?>" border="0">
    </a>
   </td>
-  <td align="right">
-   <form action="<?php echo $phpgw->link("search.php"); ?>" method="POST">
+  <form action="<?php echo $phpgw->link(""); ?>" name="filtermethod" method="POST">
+   <td width="55%" align="center" valign="center">
+    <b><?php echo lang("Filter"); ?>:</b>
     <input type="hidden" name="from" value="<?php echo $PHP_SELF; ?>">
     <?php if(isset($date) && $date) { ?>
     <input type="hidden" name="date" value="<?php echo $date; ?>">
@@ -67,12 +77,39 @@
     <input type="hidden" name="month" value="<?php echo $thismonth; ?>">
     <input type="hidden" name="day" value="<?php echo $thisday; ?>">
     <input type="hidden" name="year" value="<?php echo $thisyear; ?>">
-    <input name="keywords">
+    <?php if(isset($keywords) && $keywords) { ?>
+    <input type="hidden" name="keywords" value="<?php echo $keywords; ?>">
+    <?php } ?>
+    <select name="filter" onchange="document.filtermethod.submit()">
+     <option value="all"<?php if((!isset($filter) || !$filter) || $filter=="all") echo " selected"; ?>>All</option>
+     <option value="private"<?php if($filter=="private") echo " selected"; ?>>Private Only</option>
+     <option value="public"<?php if($filter=="public") echo " selected"; ?>>Global Public Only</option>
+     <option value="group"<?php if($filter=="group") echo " selected"; ?>>Group Public Only</option>
+     <option value="private+public"<?php if($filter=="private+public") echo " selected"; ?>>Private and Global Public</option>
+     <option value="private+group"<?php if($filter=="private+group") echo " selected"; ?>>Private and Group Public</option>
+     <option value="public+group"<?php if($filter=="public+group") echo " selected"; ?>>Global Public and Group Public</option>
+    </select>
+   </td>
+  </form>
+  <form action="<?php echo $phpgw->link("search.php"); ?>" method="POST">
+   <td align="right" valign="center">
+    <input type="hidden" name="from" value="<?php echo $PHP_SELF; ?>">
+    <?php if(isset($date) && $date) { ?>
+    <input type="hidden" name="date" value="<?php echo $date; ?>">
+    <?php } ?>
+    <input type="hidden" name="month" value="<?php echo $thismonth; ?>">
+    <input type="hidden" name="day" value="<?php echo $thisday; ?>">
+    <input type="hidden" name="year" value="<?php echo $thisyear; ?>">
+    <?php if(isset($filter) && $filter) { ?>
+    <input type="hidden" name="filter" value="<?php echo $filter; ?>">
+    <?php } ?>
+    <input name="keywords"<?php if($keywords) echo " value=\"".$keywords."\""; ?>>
     <input type="submit" name="submit" value="<?php echo lang("Search"); ?>">
-   </form>
-  </td>
+   </td>
+  </form>
  </tr>
 </table>
 <?php
+    flush();
     }
 ?>
