@@ -1,4 +1,3 @@
-<?php php_track_vars?>
 <?php
   /**************************************************************************\
   * phpGroupWare - Calendar                                                  *
